--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Malayaja Varada - DevOps Engineer</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
     <div class="container">
       <h1>Malayaja Varada</h1>
@@ -25,21 +26,26 @@
     </div>
   </header>
 
+  <!-- About Section -->
   <section id="about" class="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>
-        Skilled DevOps Engineer with 3+ years of experience in CI/CD processes, Linux/Unix Administration, and Cloud Implementation. Proficient in AWS, Docker, Kubernetes, Ansible, and Terraform. Passionate about automating infrastructure and optimizing deployment pipelines.
-      </p>
-      <p><strong>Email:</strong> malayajavarada97@gmail.com | <strong>Phone:</strong> +1 660-541-1798</p>
+      <div class="about-content">
+        <p>
+          Skilled DevOps Engineer with 3+ years of experience in CI/CD processes, Linux/Unix Administration, and Cloud Implementation. Proficient in AWS, Docker, Kubernetes, Ansible, and Terraform. Passionate about automating infrastructure and optimizing deployment pipelines.
+        </p>
+        <p><strong>Email:</strong> malayajavarada97@gmail.com | <strong>Phone:</strong> +1 660-541-1798</p>
+      </div>
     </div>
   </section>
 
+  <!-- Skills Section -->
   <section id="skills" class="skills">
     <div class="container">
       <h2>Skills</h2>
       <div class="skills-grid">
-        <div>
+        <div class="skill-card">
+          <i class="fas fa-cloud"></i>
           <h3>Cloud Platforms</h3>
           <ul>
             <li>AWS</li>
@@ -47,7 +53,8 @@
             <li>Google Cloud Platform (GCP)</li>
           </ul>
         </div>
-        <div>
+        <div class="skill-card">
+          <i class="fas fa-tools"></i>
           <h3>DevOps Tools</h3>
           <ul>
             <li>Jenkins</li>
@@ -57,7 +64,8 @@
             <li>Terraform</li>
           </ul>
         </div>
-        <div>
+        <div class="skill-card">
+          <i class="fas fa-code"></i>
           <h3>Programming</h3>
           <ul>
             <li>Python</li>
@@ -70,6 +78,7 @@
     </div>
   </section>
 
+  <!-- Experience Section -->
   <section id="experience" class="experience">
     <div class="container">
       <h2>Professional Experience</h2>
@@ -94,26 +103,32 @@
     </div>
   </section>
 
+  <!-- Projects Section -->
   <section id="projects" class="projects">
     <div class="container">
       <h2>Projects</h2>
-      <div class="project-item">
-        <h3>Face Detection and Recognition Using Machine Learning Algorithms</h3>
-        <p>GitHub: <a href="https://github.com/SaiMalayajaVarada/GRAD-DIRECT-PROJECT-I-02-GROUP-5" target="_blank">View Project</a></p>
-      </div>
-      <div class="project-item">
-        <h3>Gym Management Application</h3>
-        <p>GitHub: <a href="https://github.com/Archanaredy/GymManagementApp" target="_blank">View Project</a></p>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Face Detection and Recognition Using Machine Learning Algorithms</h3>
+          <p>GitHub: <a href="https://github.com/SaiMalayajaVarada/GRAD-DIRECT-PROJECT-I-02-GROUP-5" target="_blank">View Project</a></p>
+        </div>
+        <div class="project-card">
+          <h3>Gym Management Application</h3>
+          <p>GitHub: <a href="https://github.com/Archanaredy/GymManagementApp" target="_blank">View Project</a></p>
+        </div>
       </div>
     </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="contact">
     <div class="container">
       <h2>Contact Me</h2>
       <p>Feel free to reach out for collaborations or opportunities!</p>
-      <p><strong>Email:</strong> malayajavarada97@gmail.com</p>
-      <p><strong>Phone:</strong> +1 660-541-1798</p>
+      <div class="contact-info">
+        <p><strong>Email:</strong> malayajavarada97@gmail.com</p>
+        <p><strong>Phone:</strong> +1 660-541-1798</p>
+      </div>
       <div class="social-links">
         <a href="https://github.com/SaiMalayajaVarada" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/malayaja-varada" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -121,6 +136,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <div class="container">
       <p>&copy; 2023 Malayaja Varada. All rights reserved.</p>
