Enhanced UI, fixed header, added dark mode

--- a/index.html
+++ b/index.html
@@ -1,146 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malayaja Varada - DevOps Engineer</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Malayaja Varada - DevOps Engineer</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="container">
-      <h1>Malayaja Varada</h1>
-      <p>DevOps Engineer | Cloud Specialist | Automation Expert</p>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
 
-  <!-- About Section -->
-  <section id="about" class="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <div class="about-content">
-        <p>
-          Skilled DevOps Engineer with 3+ years of experience in CI/CD processes, Linux/Unix Administration, and Cloud Implementation. Proficient in AWS, Docker, Kubernetes, Ansible, and Terraform. Passionate about automating infrastructure and optimizing deployment pipelines.
-        </p>
-        <p><strong>Email:</strong> malayajavarada97@gmail.com | <strong>Phone:</strong> +1 660-541-1798</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Skills Section -->
-  <section id="skills" class="skills">
-    <div class="container">
-      <h2>Skills</h2>
-      <div class="skills-grid">
-        <div class="skill-card">
-          <i class="fas fa-cloud"></i>
-          <h3>Cloud Platforms</h3>
-          <ul>
-            <li>AWS</li>
-            <li>Microsoft Azure</li>
-            <li>Google Cloud Platform (GCP)</li>
-          </ul>
+    <!-- Header Section -->
+    <header id="main-header">
+        <div class="container">
+            <h1>Malayaja Varada</h1>
+            <p>DevOps Engineer | Cloud Specialist | Automation Expert</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="skill-card">
-          <i class="fas fa-tools"></i>
-          <h3>DevOps Tools</h3>
-          <ul>
-            <li>Jenkins</li>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-            <li>Ansible</li>
-            <li>Terraform</li>
-          </ul>
-        </div>
-        <div class="skill-card">
-          <i class="fas fa-code"></i>
-          <h3>Programming</h3>
-          <ul>
-            <li>Python</li>
-            <li>Bash</li>
-            <li>Java</li>
-            <li>SQL</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+    </header>
 
-  <!-- Experience Section -->
-  <section id="experience" class="experience">
-    <div class="container">
-      <h2>Professional Experience</h2>
-      <div class="experience-item">
-        <h3>DevOps Engineer - Goldman Sachs Global</h3>
-        <p><em>June 2023 - Present</em></p>
-        <ul>
-          <li>Managed and optimized AWS infrastructure, including EC2, S3, and DynamoDB.</li>
-          <li>Developed CI/CD pipelines using Jenkins for Java-based applications.</li>
-          <li>Automated configuration and deployment using Ansible.</li>
-        </ul>
-      </div>
-      <div class="experience-item">
-        <h3>DevOps Engineer - Sundaram Finance</h3>
-        <p><em>May 2019 - Nov 2021</em></p>
-        <ul>
-          <li>Configured EC2 instances and implemented cloud operations using Docker and Kubernetes.</li>
-          <li>Automated infrastructure provisioning using Chef and Puppet.</li>
-          <li>Developed Jenkins CI/CD pipelines for automated testing and deployment.</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project-grid">
-        <div class="project-card">
-          <h3>Face Detection and Recognition Using Machine Learning Algorithms</h3>
-          <p>GitHub: <a href="https://github.com/SaiMalayajaVarada/GRAD-DIRECT-PROJECT-I-02-GROUP-5" target="_blank">View Project</a></p>
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Experienced DevOps Engineer skilled in CI/CD, cloud technologies, automation, and infrastructure management.</p>
         </div>
-        <div class="project-card">
-          <h3>Gym Management Application</h3>
-          <p>GitHub: <a href="https://github.com/Archanaredy/GymManagementApp" target="_blank">View Project</a></p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="fas fa-cloud"></i>
+                    <h3>Cloud Platforms</h3>
+                    <ul>
+                        <li>AWS</li>
+                        <li>Azure</li>
+                        <li>Google Cloud</li>
+                    </ul>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-tools"></i>
+                    <h3>DevOps Tools</h3>
+                    <ul>
+                        <li>Jenkins</li>
+                        <li>Docker</li>
+                        <li>Kubernetes</li>
+                    </ul>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-code"></i>
+                    <h3>Programming</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Bash</li>
+                        <li>Java</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <div class="container">
-      <h2>Contact Me</h2>
-      <p>Feel free to reach out for collaborations or opportunities!</p>
-      <div class="contact-info">
-        <p><strong>Email:</strong> malayajavarada97@gmail.com</p>
-        <p><strong>Phone:</strong> +1 660-541-1798</p>
-      </div>
-      <div class="social-links">
-        <a href="https://github.com/SaiMalayajaVarada" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/malayaja-varada" target="_blank"><i class="fab fa-linkedin"></i></a>
-      </div>
-    </div>
-  </section>
+    <!-- Projects Section -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Face Recognition AI</h3>
+                    <p><a href="https://github.com/SaiMalayajaVarada/GRAD-DIRECT-PROJECT-I-02-GROUP-5" target="_blank">View Project</a></p>
+                </div>
+                <div class="project-card">
+                    <h3>Gym Management System</h3>
+                    <p><a href="https://github.com/Archanaredy/GymManagementApp" target="_blank">View Project</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p>&copy; 2023 Malayaja Varada. All rights reserved.</p>
-    </div>
-  </footer>
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>Email: malayajavarada97@gmail.com</p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/malayaja-varada" target="_blank">View Profile</a></p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Malayaja Varada. All rights reserved.</p>
+    </footer>
+
+    <!-- JavaScript -->
+    <script>
+        // Shrink Header on Scroll
+        window.addEventListener("scroll", function () {
+            let header = document.getElementById("main-header");
+            if (window.scrollY > 50) {
+                header.classList.add("shrink");
+            } else {
+                header.classList.remove("shrink");
+            }
+        });
+
+        // Dark Mode Toggle
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+        }
+    </script>
+
+    <!-- Dark Mode Toggle Button -->
+    <button class="toggle-theme" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+
 </body>
 </html>
