--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://saimalayajavarada.github.io/Portfolio/#experience" target="_blank">Portfolio</a></li>
+                    <li><a href="Malayaja Vs_ (1).pdf" target="_blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +33,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Experienced DevOps Engineer skilled in CI/CD, cloud technologies, automation, and infrastructure management.</p>
+            <p>Experienced DevOps Engineer with over 3 years of expertise in CI/CD, cloud technologies, automation, and infrastructure management. Proficient in AWS, Azure, and Google Cloud, with a strong background in Linux/Unix administration and containerization technologies like Docker and Kubernetes.</p>
         </div>
     </section>
 
@@ -56,6 +58,8 @@
                         <li>Jenkins</li>
                         <li>Docker</li>
                         <li>Kubernetes</li>
+                        <li>Terraform</li>
+                        <li>Ansible</li>
                     </ul>
                 </div>
                 <div class="skill-card">
@@ -65,6 +69,36 @@
                         <li>Python</li>
                         <li>Bash</li>
                         <li>Java</li>
+                        <li>Shell Scripting</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <h2>Experience</h2>
+            <div class="experience-grid">
+                <div class="experience-card">
+                    <h3>Goldman Sachs Global</h3>
+                    <p><strong>DevOps Engineer</strong> | June 2023 - Present</p>
+                    <ul>
+                        <li>Managed and optimized AWS infrastructure, including EC2, S3, and DynamoDB.</li>
+                        <li>Developed CI/CD pipelines using Jenkins for Java-based applications.</li>
+                        <li>Automated configuration and deployment using Ansible.</li>
+                        <li>Deployed and managed Docker containers for microservices architecture.</li>
+                    </ul>
+                </div>
+                <div class="experience-card">
+                    <h3>Sundaram Finance</h3>
+                    <p><strong>DevOps Engineer</strong> | May 2019 - Nov 2021</p>
+                    <ul>
+                        <li>Configured EC2 instances and implemented cloud operations using Docker and Kubernetes.</li>
+                        <li>Automated infrastructure provisioning using Chef and Puppet.</li>
+                        <li>Developed Jenkins CI/CD pipelines for automated testing and deployment.</li>
+                        <li>Integrated GIT with Jenkins for continuous integration.</li>
                     </ul>
                 </div>
             </div>
@@ -78,10 +112,12 @@
             <div class="project-grid">
                 <div class="project-card">
                     <h3>Face Recognition AI</h3>
+                    <p>Developed a face recognition system using machine learning algorithms.</p>
                     <p><a href="https://github.com/SaiMalayajaVarada/GRAD-DIRECT-PROJECT-I-02-GROUP-5" target="_blank">View Project</a></p>
                 </div>
                 <div class="project-card">
                     <h3>Gym Management System</h3>
+                    <p>Created a gym management application to handle member registrations and payments.</p>
                     <p><a href="https://github.com/Archanaredy/GymManagementApp" target="_blank">View Project</a></p>
                 </div>
             </div>
@@ -92,8 +128,10 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contact Me</h2>
-            <p>Email: malayajavarada97@gmail.com</p>
+            <p>Email: <a href="mailto:malayajavarada97@gmail.com">malayajavarada97@gmail.com</a></p>
             <p>LinkedIn: <a href="https://linkedin.com/in/malayaja-varada" target="_blank">View Profile</a></p>
+            <p>Portfolio: <a href="https://saimalayajavarada.github.io/Portfolio/#experience" target="_blank">View Portfolio</a></p>
+            <p>Resume: <a href="Malayaja Vs_ (1).pdf" target="_blank">Download Resume</a></p>
         </div>
     </section>
 
