--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         <div class="container">
             <h2>Contact Me</h2>
             <p>Email: <a href="mailto:malayajavarada97@gmail.com">malayajavarada97@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/malayaja-varada" target="_blank">View Profile</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/malayaja-m-40923b241/" target="_blank">View Profile</a></p>
             <p>Portfolio: <a href="https://saimalayajavarada.github.io/Portfolio/#experience" target="_blank">View Portfolio</a></p>
-            <p>Resume: <a href="Malayaja Vs_ (1).pdf" target="_blank">Download Resume</a></p>
+            <p>Resume: <a href="Malayaja Vs_.pdf" target="_blank">Download Resume</a></p>
         </div>
     </section>
 
